# ios-simulator

./: EMULATOR_PLAN.md  EMULATOR_README.md  README.md  flake.nix  shell.nix
docs/: BUILDING.md  EMULATOR.md  REMOTE_SIMULATOR.md  SETUP.md  TESTING.md
emulator/: Cargo.toml
emulator/src/: device.rs  emulator.rs  error.rs  lib.rs
emulator/src/frameworks/: foundation.rs  mod.rs  network.rs  uikit.rs
emulator/src/runtime/: mod.rs
emulator/src/services/: mod.rs
nix/: detox-tools.nix  ios-platforms.nix  ios-tools.nix
scripts/: connect-simulator.sh  detox-setup.sh  simulator-proxy.sh
